# emulator-jakt

./: .gitignore  CMakeLists.txt  README.md  setup.sh
src/: main.jakt  vm.jakt
